code/apps/msp-registrar/base/registrar-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: msp-registrar
  namespace: msp
  labels:
    app: msp-registrar
spec:
  selector:
    matchLabels:
      app: msp-registrar
  template:
    metadata:
      labels:
        app: msp-registrar
    spec:
      containers:
      - name: msp-registrar
        image: registry-msp:5000/msp/msp-registrar:0.1.0
        imagePullPolicy: "Always"
        resources:
          requests:
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - name: http
          containerPort: 9080
          protocol: TCP
        volumeMounts:
          - name: msp-registrar-pvc-storage
            mountPath: /data
      volumes:
        - name: msp-registrar-pvc-storage
          persistentVolumeClaim:
            claimName: msp-registrar-pvc
         # - name: https
        #   containerPort: 8883
        #   protocol: TCP
      #   volumeMounts:
      #       - name: mosquitto-config
      #         mountPath: /mosquitto/config/mosquitto.conf
      #         subPath: mosquitto.conf
      #       # - name: mosquitto-certs
      #       #   mountPath: /certs/ca.crt
      #       #   subPath: ca.crt
      #       # - name: mosquitto-certs
      #       #   mountPath: /certs/server.crt
      #       #   subPath: server.crt
      #       # - name: mosquitto-certs
      #       #   mountPath: /certs/server.key
      #       #   subPath: server.key
      # volumes:
      #   - name: mosquitto-config
      #     configMap:
      #       name: mosquitto-config
      #   # - name: mosquitto-certs
      #   #   configMap:
      #   #     name: mosquitto-certs
