code/apps/msp-registrar/base/registrar-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: msp-registrar
  namespace: msp
  labels:
    app: msp-registrar
spec:
  selector:
    app: msp-registrar
  ports:
  - name: http
    protocol: TCP
    port: 9080
    targetPort: 9080
  # - name: https
  #   port: 8883
  #   targetPort: 8883
  # type: LoadBalancer
  type: ClusterIP
