code/apps/msp-registrar/base/registrar-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: msp-registrar-stripprefix
  namespace: msp
  labels:
    app: msp-registrar
spec:
  stripPrefix:
    prefixes:
      - /envds/manage
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: msp-registrar-ingress
  namespace: msp
  # labels:
  #   app: envds
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    traefik.ingress.kubernetes.io/router.middlewares:
      msp-msp-registrar-stripprefix@kubernetescrd
      # default-erddap-rewrite@kubernetescrd
spec:
  rules:
  - http:
      paths:
      # - path: /erddap
      - path: /envds/registrar
        pathType: Prefix
        # pathType: Exact
        backend:
          service:
            name: msp-registrar
            port:
              number: 8080
